--- a/css/components/inc01.css
+++ b/css/components/inc01.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-#atc01{position:relative;margin:11.25rem 0;width:100%}
+#atc01{position:relative;margin:11.25rem 0;width:100vw;margin-left:calc(50% - 50vw);margin-right:calc(50% - 50vw)}
 #atc01 .inc01_slide{overflow:hidden;position:relative;padding-top:6.25rem;width:100%}
 #atc01 .inc01_slide li{display:flex;flex-direction:column;justify-content:center;width:100%}
 #atc01 .inc01_slide li .img_cont{display:flex;justify-content:center;align-items:center;border-radius:1.25rem;width:100%;height:36.25rem}
